add checkbox and radio support

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "author": "cap32",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
